--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,7 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" 
       crossorigin="anonymous"
     >
-    <title>Welcome to connecto</title>
+    <title>Welcome to devWEavers</title>
   </head>
   <body>
     <div id="root"></div>
